Index markdown file
Signed-off-by: RajrupDasid <rajrupofficialid@protonmail.com>

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <li><a href="#">contact up</a></li>
             <li class="booking"><a href="#">booking <ion-icon name="add-outline"></ion-icon></a></li>
         </ul>
-        <a href="#" class="menu active"><ion-icon name="grid-outline"></ion-icon></a>
+        <a href="#" class="menu" onclick="toggleMenu()"><ion-icon name="grid-outline"></ion-icon></a>
     </header>
     <ul class="nav-mobile">
         <li><a href="#">destinations</a></li>
@@ -42,9 +42,9 @@
             <img src="./images/map.png" alt="" srcset="" class="map">
           </div>
           <div class="content-left">
-            <h1>Wor</h1>
+            <h1>Nat</h1>
             <div class="description">
-              <h3>Discover World</h3>
+              <h3>Discover Nature</h3>
               <p>Lorem ipsum dolor sit amet 
                 consectetur adipisicing elit. Sequi neque perferendis voluptas quam? Praesentium fugiat ipsum, 
                 libero quibusdam repellendus sequi.
@@ -53,7 +53,7 @@
             </div>
           </div>
           <div class="content-right">
-            <h1><span>l</span>d</h1>
+            <h1>u<span>r</span>e</h1>
             <p class="text-side">Rainforest Nature Park</p>
           </div>
         </div>
@@ -63,6 +63,24 @@
         <div class="banner">
           <img src="./images/reef-1.jpg" alt="" srcset="">
           <div class="shade"></div>
+          <div class="drop">
+            <video src="./assets/reefs.mp4" loop autoplay muted></video>
+          </div>
+          <div class="content-left">
+            <h1>Barrie</h1>
+            <div class="description">
+              <h3>Discover Reefs</h3>
+              <p>Lorem ipsum dolor sit amet 
+                consectetur adipisicing elit. Sequi neque perferendis voluptas quam? Praesentium fugiat ipsum, 
+                libero quibusdam repellendus sequi.
+              </p>
+              <a href="#">Start Now</a>
+            </div>
+          </div>
+          <div class="content-right">
+            <h1>r<span>R</span>eef</h1>
+            <p class="text-side">Beautiful Barrier reefs</p>
+          </div>
         </div>
       </div>
       <!-- rain forests -->
@@ -70,6 +88,24 @@
         <div class="banner">
           <img src="./images/forest-2.jpg" alt="" srcset="">
           <div class="shade"></div>
+          <div class="drop">
+            <video src="./assets/forest.mp4" loop autoplay muted></video>
+          </div>
+          <div class="content-left">
+            <h1>Rainfo</h1>
+            <div class="description">
+              <h3>Discover Rainforest</h3>
+              <p>Lorem ipsum dolor sit amet 
+                consectetur adipisicing elit. Sequi neque perferendis voluptas quam? Praesentium fugiat ipsum, 
+                libero quibusdam repellendus sequi.
+              </p>
+              <a href="#">Start Now</a>
+            </div>
+          </div>
+          <div class="content-right">
+            <h1>r<span>e</span>st</h1>
+            <p class="text-side">Rainforest Nature Rivers</p>
+          </div>
         </div>
       </div>
       <!-- Palm cover slider -->
@@ -77,6 +113,24 @@
         <div class="banner">
           <img src="./images/beach-1.jpg" alt="" srcset="">
           <div class="shade"></div>
+          <div class="drop">
+            <video src="./assets/pass.mp4" loop autoplay muted></video>
+          </div>
+          <div class="content-left">
+            <h1>Oc</h1>
+            <div class="description">
+              <h3>Discover Ocean</h3>
+              <p>Lorem ipsum dolor sit amet 
+                consectetur adipisicing elit. Sequi neque perferendis voluptas quam? Praesentium fugiat ipsum, 
+                libero quibusdam repellendus sequi.
+              </p>
+              <a href="#">Start Now</a>
+            </div>
+          </div>
+          <div class="content-right">
+            <h1>e<span>a</span>n</h1>
+            <p class="text-side">Blue Ocean Beaches</p>
+          </div>
         </div>
       </div>
     </div>
@@ -88,13 +142,30 @@
     <div class="swiper-button-prev"></div>
     <div class="swiper-button-next"></div>
     </div>
-  </div>
-    
+  </div> 
     <!-- If we need scrollbar
     <div class="swiper-scrollbar"></div>
   </div> -->
   
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/10.2.0/swiper-bundle.min.js" integrity="sha512-QwpsxtdZRih55GaU/Ce2Baqoy2tEv9GltjAG8yuTy2k9lHqK7VHHp3wWWe+yITYKZlsT3AaCj49ZxMYPp46iJQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<!-- footer section -->
+<footer>
+  <ul class="sci">
+    <li><a href="#"><ion-icon name="logo-github"></ion-icon></a></li>
+    <li><a href="#"><ion-icon name="logo-gitlab"></ion-icon></a></li>
+    <li><a href="#"><ion-icon name="logo-mastodon"></ion-icon></a></li>
+    <li><a href="#"><ion-icon name="logo-reddit"></ion-icon></a></li>
+  </ul>
+
+  <div class="ask-us">
+    <p>Ask US</p>
+    <a href="#" class="chat"><ion-icon name="chatbox-outline"></ion-icon></a>
+  </div>
+</footer>
+
+
+
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/10.2.0/swiper-bundle.min.js" integrity="sha512-QwpsxtdZRih55GaU/Ce2Baqoy2tEv9GltjAG8yuTy2k9lHqK7VHHp3wWWe+yITYKZlsT3AaCj49ZxMYPp46iJQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </script>
 <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
